split script logic file

--- a/src/pages/6.html
+++ b/src/pages/6.html
@@ -1,9 +1,1 @@
- <div class="book-content"><blockquote>
-  <p>Don't communicate by sharing memory, share memory by communicating.<br>
-  — <cite>Rob Pike[^1]</cite></p>
-</blockquote><p>[^1]: The above quote is excerpted from Rob Pike's <a href="https://www.youtube.com/watch?v=PAAkCSZUG1c">talk</a> during Gopherfest, November 18, 2015.</p><h2 id="tables">Tables</h2><h3 id="syntax-3">Syntax</h3><pre><code class="markdown language-markdown">| Italics   | Bold     | Code   |
-| --------- | -------- | ------ |
-| _italics_ | **bold** | `code` |
-</code></pre><h3 id="output-3">Output</h3><p>| Italics   | Bold     | Code   |
-| --------- | -------- | ------ |
-| <em>italics</em> | <strong>bold</strong> | <code>code</code> |</p><h2 id="codeblocks">Code Blocks</h2><h3 id="syntax-4">Syntax</h3></div>
+<div class="book-content"><p>Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper viverra. Tellus mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas tellus rutrum tellus pellentesque eu. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id cursus metus aliquam eleifend mi.</p><p>Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta nibh venenatis cras sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum. Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed pulvinar proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.</p></div>
