--- a/src/pages/9.html
+++ b/src/pages/9.html
@@ -1,12 +1,1 @@
- <div class="book-content"><ol>
-<li>First item</li>
-<li>Second item</li>
-<li>Third item</li>
-</ol><h3 id="unorderedlist">Unordered List</h3><h4 id="syntax-6">Syntax</h4><pre><code class="markdown language-markdown">- List item
-- Another item
-- And another item
-</code></pre><h4 id="output-6">Output</h4><ul>
-<li>List item</li>
-<li>Another item</li>
-<li>And another item</li>
-</ul><h3 id="nestedlist">Nested list</h3><h4 id="syntax-7">Syntax</h4></div>
+<div class="book-content"><p>friends</p></div>
