add split html fn

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
 		$(window).ready(function () {
 			$('#book').turn({
-				acceleration: true,
+				autoCenter: true,
 				pages: numberOfPages,
 				elevation: 150,
 				gradients: !$.isTouch,
