--- a/src/pages/8.html
+++ b/src/pages/8.html
@@ -1,1 +1,1 @@
-<div class="book-content"><p>memo1</p></div>
+<div class="book-content"><p><font style="color:rgb(51, 65, 85);">Tailwind 是一个 PostCSS 插件，</font><span>预定义了很多 工具类。</span></p><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(2).webp" alt=""></p><p><font style="color:rgb(44, 62, 80);">扫描所有HTML文件、JavaScript组件和任何其他模板的类名，生成相应的样式，然后将它们写入静态CSS文件。</font></p><p>PostCSS又是啥？<a href="https://www.postcss.com.cn/">https://www.postcss.com.cn/</a></p><p></p></div>
