--- a/src/pages/1.html
+++ b/src/pages/1.html
@@ -1,1 +1,1 @@
-<div class="book-content"><p>hello cover</p></div>
+<div class="book-content"><p>hello cover</p></div><div class="page-number">1</div>
