--- a/src/pages/11.html
+++ b/src/pages/11.html
@@ -1,4 +1,4 @@
-<div class="book-content"><h2 id="p2vST">优点</h2><ol>
+<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><ol>
 <li>不需要起类名</li>
 <li>减少部分代码量</li>
 <li>社区氛围？</li>
@@ -7,4 +7,4 @@
 <li>防止css污染？</li>
 <li>自带设计系统（支持自定义）</li>
 <li>响应式布局更方便。自带媒体查询</li>
-</ol><h2 id="AQbkp">缺点</h2></div>
+</ol><h3 id="AQbkp">缺点</h3></div><div class="page-number">11</div>
