--- a/src/pages/6.html
+++ b/src/pages/6.html
@@ -1,1 +1,1 @@
-<div class="book-content"><p><a href="https://tailwindcss.com/docs/utility-first">https://tailwindcss.com/docs/utility-first</a></p><p>官方解释：</p><p><img src="http://www.turnjs.com/samples/steve-jobs/pics/books.jpg?" alt=""></p><p></p></div>
+<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><p class="no-indent">的写法很像bootstrap！ 也和amis里面的样式有点像（</p></p><p>具体的语法不在此赘述，官网自查</p><p><a href="https://tailwindcss.com/docs/utility-first">https://tailwindcss.com/docs/utility-first</a></p><p>官方解释：</p><p></p></div><div class="page-number">6</div>
