--- a/src/pages/13.html
+++ b/src/pages/13.html
@@ -1,1 +1,1 @@
-<div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(4).webp" alt="" style="transform-origin: left top; width: 100%;"></p></div>
+<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(4).webp" alt="" style="width: 100%;"></p></div><div class="page-number">13</div>
