--- a/src/pages/14.html
+++ b/src/pages/14.html
@@ -1,6 +1,6 @@
-<div class="book-content"><h1 id="BfhFz">技术选型</h1><ol>
+<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><h2 id="BfhFz">技术选型</h2><ol>
 <li>个人项目 / 小业务：一眼看上去喜欢 &gt;&gt; 开发体验 &gt; 维护性 &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 学习成本</li>
 <li>长期项目：生态 = 维护性 &gt; 开发体验 &gt; 学习成本 &gt; 性能 &gt; 团队技术栈</li>
 <li>时间紧急的项目：生态 &gt; 学习成本 &gt; 团队技术栈 &gt; 开发体验 &gt; 维护性 &gt; 性能</li>
 <li>首页项目，重性能的项目：不用CSS-IN-JS &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 维护性 &gt; 学习成本 &gt; 开发体验</li>
-</ol></div>
+</ol><h2 id="VIrFX">总结</h2><p></p></div><div class="page-number">14</div>
