--- a/src/pages/16.html
+++ b/src/pages/16.html
@@ -1,1 +1,1 @@
-<div class="book-content"><p><span>Adam Wathan喜欢叫做 kiteboarding 风筝冲浪的运动。 就是这样的，一个风筝，一个冲浪板：</span></p><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(5).webp" alt=""></p><p></p></div>
+<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(5).webp" alt="" style="width: 100%;"></p><p>这种运动在顺风 tailwind 和逆风 headwind 下有不同的技巧。而 tailwind 的时候明显更加省力。 所以就给这个 css 框架起</p></div><div class="page-number">16</div>
