--- a/src/pages/1.html
+++ b/src/pages/1.html
@@ -1,1 +1,30 @@
-<div class="book-content"><p>hello cover</p></div><div class="page-number">1</div>
+<div class="book-content">
+    <img src="" alt="" id="coverImage" style="
+      width: 300px;
+      max-height: 350px;
+      object-fit: cover;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+    " />
+    <script>
+        let randomNumber = Math.floor(Math.random() * 8) + 1;
+        let coverImage = `https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/blog-covers/cover${randomNumber}.webp`;
+        document.getElementById('coverImage').src = coverImage;
+    </script>
+    <div style="
+      font-family: cursive;
+      text-align: center;
+      width: fit-content;
+      white-space: pre-line;
+      position: absolute;
+      bottom: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+    ">
+        我有明珠一颗 久被尘劳关锁
+        待得尘尽光生 照破山河万朵
+    </div>
+</div>
+
+<div class="page-number">1</div>
