--- a/src/pages/12.html
+++ b/src/pages/12.html
@@ -1,6 +1,6 @@
-<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><ol>
-<li>html丑陋 （解决方案：Daisy UI <a href="https://daisyui.com/">https://daisyui.com/</a> 组件化+定制化）</li>
-<li>难维护，难调试。</li>
-<li>多下载一个安装包（5MB）</li>
-<li>需要一定学习成本，需要频繁查官网（</li>
-</ol><h2 id="Eg9T4">用不用？</h2><p></p></div><div class="page-number">12</div>
+<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><h2 id="BfhFz">技术选型</h2><ol>
+<li>个人项目 / 小业务：一眼看上去喜欢 &gt;&gt; 开发体验 &gt; 维护性 &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 学习成本</li>
+<li>长期项目：生态 = 维护性 &gt; 开发体验 &gt; 学习成本 &gt; 性能 &gt; 团队技术栈</li>
+<li>时间紧急的项目：生态 &gt; 学习成本 &gt; 团队技术栈 &gt; 开发体验 &gt; 维护性 &gt; 性能</li>
+<li>首页项目，重性能的项目：不用CSS-IN-JS &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 维护性 &gt; 学习成本 &gt; 开发体验</li>
+</ol><h2 id="VIrFX">总结</h2><p>CSS方案只要不是太逆天，其实都可以接受。选择一个CSS框架的本心是为了更好的适配现代前端框架和团队的开发理念。保守的技术选型可以降低开发风险，优秀的生态可以持续增强开发体验。在这些基础之上，才应该再去考虑是否添一些新东西来增强某一方面的开发体验或效果。</p></div><div class="page-number">12</div>
