--- a/src/pages/15.html
+++ b/src/pages/15.html
@@ -1,1 +1,1 @@
-<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><p class="no-indent">CSS方案只要不是太逆天，其实都可以接受。选择一个CSS框架的本心是为了更好的适配现代前端框架和团队的开发理念。保守的技术选型可以降低开发风险，优秀的生态可以持续增强开发体验。在这些基础之上，才应该再去考虑是否添一些新东西来增强某一方面的开发体验或效果。</p></p><h2 id="bzGQb">八卦</h2><p>为啥这个 css 框架叫 tailwind 呢？ 因为作者 Adam Wathan喜欢叫做 kiteboarding 风筝冲浪的运动。 就是这样的，一个风筝，一个冲浪板：</p><p></p></div><div class="page-number">15</div>
+<div class="book-content"><h1 class="p-title">test</h1><p class="create-time"> 2024/11/11</p></div><div class="page-number">15</div>
