--- a/src/pages/10.html
+++ b/src/pages/10.html
@@ -1,1 +1,6 @@
-<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(3).webp" alt="" style="width: 100%;"></p><p>tailwindcss原理。和上面类似，只不过读取的是我们在配置文件设置的匹配的文件，读他们的class，生成对应工具类的css</p><h2 id="n4J0q">优缺点？</h2><h3 id="p2vST">优点</h3></div><div class="page-number">10</div>
+<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><ol>
+<li>html丑陋 （解决方案：Daisy UI <a href="https://daisyui.com/">https://daisyui.com/</a> 组件化+定制化）</li>
+<li>难维护，难调试。</li>
+<li>多下载一个安装包（5MB）</li>
+<li>需要一定学习成本，需要频繁查官网（</li>
+</ol><h2 id="Eg9T4">用不用？</h2><p></p></div><div class="page-number">10</div>
