--- a/src/pages/11.html
+++ b/src/pages/11.html
@@ -1,10 +1,1 @@
-<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><ol>
-<li>不需要起类名</li>
-<li>减少部分代码量</li>
-<li>社区氛围？</li>
-<li>编写迅速</li>
-<li>tree shaking，官方说能减少到10k以下</li>
-<li>防止css污染？</li>
-<li>自带设计系统（支持自定义）</li>
-<li>响应式布局更方便。自带媒体查询</li>
-</ol><h3 id="AQbkp">缺点</h3></div><div class="page-number">11</div>
+<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(4).webp" alt="" style="width: 100%;"></p></div><div class="page-number">11</div>
