--- a/src/pages/14.html
+++ b/src/pages/14.html
@@ -1,6 +1,1 @@
-<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><h2 id="BfhFz">技术选型</h2><ol>
-<li>个人项目 / 小业务：一眼看上去喜欢 &gt;&gt; 开发体验 &gt; 维护性 &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 学习成本</li>
-<li>长期项目：生态 = 维护性 &gt; 开发体验 &gt; 学习成本 &gt; 性能 &gt; 团队技术栈</li>
-<li>时间紧急的项目：生态 &gt; 学习成本 &gt; 团队技术栈 &gt; 开发体验 &gt; 维护性 &gt; 性能</li>
-<li>首页项目，重性能的项目：不用CSS-IN-JS &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 维护性 &gt; 学习成本 &gt; 开发体验</li>
-</ol><h2 id="VIrFX">总结</h2><p></p></div><div class="page-number">14</div>
+<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><p class="no-indent">这种运动在顺风 tailwind 和逆风 headwind 下有不同的技巧。而 tailwind 的时候明显更加省力。 所以就给这个 css 框架起名叫 tailwind 了，借用其省力的意思。</p></p></div><div class="page-number">14</div>
