--- a/src/pages/16.html
+++ b/src/pages/16.html
@@ -1,1 +1,1 @@
-<div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(5).webp" alt="" style="width: 100%;"></p><p>这种运动在顺风 tailwind 和逆风 headwind 下有不同的技巧。而 tailwind 的时候明显更加省力。 所以就给这个 css 框架起</p></div><div class="page-number">16</div>
+<div class="book-content"><h1 class="p-title">设计模式</h1><p class="create-time"> 2024/11/11</p><h1 id="">订阅与发布/观察者模式</h1><p>前者比后者多了一个 管理员</p><h1 id="-1">观察者模式</h1></div><div class="page-number">16</div>
