--- a/src/pages/2.html
+++ b/src/pages/2.html
@@ -1,1 +1,24 @@
-<div class="book-content"><p>about</p></div><div class="page-number">2</div>
+<div class="book-content">
+    <div id="page2">
+        <div class="author-info">
+            <div>
+                <img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/common-pic/me.webp" alt="" />
+            </div>
+            <div class="author-detail">
+                <div>Hi，I'm</div>
+                <div>Alplune</div>
+                <div>寒冬、雪山、明月</div>
+            </div>
+        </div>
+
+        <p class="about-me">大学时间大部分花在了 web 前端开发技术上。
+            <a href="https://sast.fun/">南邮校科协</a>和<a href="https://qingyou.studio/">青柚工作室</a>
+            ，这两个社团丰富了我的大学生活，是我技术学习的引路人。
+        </p>
+        <p class="about-me">曾经在百度、小红书和网易实习。运气很好，技术和生活都有所收获。</p>
+        <p class="about-me">现状是在学校享受最后的校园生活：写代码+运动+补习历史知识。博客写完了打算做一些 lab 稳固一下计算机基础。
+        <p class="about-me">未来打算在互联网公司工作，攒够钱了去环球旅行。</p>
+    </div>
+</div>
+</div>
+<div class="page-number">2</div>
