--- a/src/pages/5.html
+++ b/src/pages/5.html
@@ -1,6 +1,6 @@
-<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><p class="no-indent">ss 写法是定义 class，然后在 class 内部写样式，而原子化 css 是预定义一些细粒度 class，通过组合 class 的方式完成样式编写</p></p><p><font style="color:rgb(44, 62, 80);">核心特点：功能类优先（utility-first）</font></p><p>官网首页提到的点：</p><ol>
+<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><p class="no-indent">官网首页提到的点：</p></p><ol>
 <li>内置的设计系统</li>
 <li>treeshaking</li>
 <li>配置文件-&gt; 扩展、自定义</li>
 <li>媒体查询、伪元素伪类书写方式、暗色模式</li>
-</ol><h2 id="vlffW">怎么用？</h2><p>它的写法很像bootstrap！ 也和amis里面</p></div><div class="page-number">5</div>
+</ol><h2 id="vlffW">怎么用？</h2><p>它的写法很像bootstrap！ 也和amis里面的样式有点像（</p><p>具体的语法不在此赘述，官网自查</p><p><a href="https://tailwindcss.com/docs/utility-first">https://tailwindcss.com/docs/utility-first</a></p><p>官方解释：</p><p></p></div><div class="page-number">5</div>
