--- a/src/pages/2.html
+++ b/src/pages/2.html
@@ -2,9 +2,9 @@
     <div id="page2">
         <div class="author-info">
             <div>
-                <img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/common-pic/me.webp" alt="" />
+                <img src="/src/assets/me.svg" alt="" />
             </div>
-            <div class="author-detail">
+            <div class=" author-detail">
                 <div>Hi，I'm</div>
                 <div>Alplune</div>
                 <div>寒冬、雪山、明月</div>
@@ -16,9 +16,8 @@
             ，这两个社团丰富了我的大学生活，是我技术学习的引路人。
         </p>
         <p class="about-me">曾经在百度、小红书和网易实习。运气很好，技术和生活都有所收获。</p>
-        <p class="about-me">现状是在学校享受最后的校园生活：写代码+运动+补习历史知识。博客写完了打算做一些 lab 稳固一下计算机基础。
+        <p class="about-me">现状是在学校享受最后的校园生活：写代码+运动+补习历史知识。博客写完了打算做一些 lab 稳固一下计算机基础。</p>
         <p class="about-me">未来打算在互联网公司工作，攒够钱了去环球旅行。</p>
     </div>
-</div>
 </div>
 <div class="page-number">2</div>
