--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
 
 <head>
 	<title>Alplune's Blog</title>
+	<link rel="icon" href="./assets/alplune.svg" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="../../turn.min.js"></script>
 	<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -18,7 +20,9 @@
 
 	<div class="nav-buttons">
 		<div id="prev-btn" class="nav-btn"></div>
+		<div id="pre-dep" class="dep"></div>
 		<div id="book"></div>
+		<div id="nex-dep" class="dep"></div>
 		<div id="next-btn" class="nav-btn"></div>
 	</div>
 
