fix source path and pagecount fn

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
 	<title>Alplune's Blog</title>
-	<link rel="icon" href="./assets/alplune.svg" />
+	<link rel="icon" href="/src/assets/alplune.svg" />
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="../../turn.min.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<script type="text/javascript" src="/turn.min.js"></script>
+	<link rel="stylesheet" href="./src/style.css">
 
 </head>
 
@@ -15,7 +15,7 @@
 		<i class="icon" id="content-table"></i>
 		<a class="icon" id="github" href="https://github.com/Mingaaaaaaa"></a>
 		<a class="icon" id="email" href="mailto:mingaaaa@outlook.com"></a>
-		<i class="icon" id="rss"></i>
+		<a class="icon" id="rss" href="./rss.xml"></a>
 	</div>
 
 	<div class="nav-buttons">
@@ -32,8 +32,8 @@
 		</div>
 	</div>
 
-	<script src="./script.js"></script>
-	<script src="./viewpic.js"></script>
+	<script src="./src/script.js"></script>
+	<script src="./src/viewpic.js"></script>
 </body>
 
 </html>
