fix source path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Alplune's Blog</title>
 	<base href="/blog/">
-	<link rel="icon" href="/src/assets/alplune.svg" />
+	<link rel="icon" href="./src/assets/alplune.svg" />
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="./turn.min.js"></script>
 	<link rel="stylesheet" href="./src/style.css">
