fix source path

--- a/src/pages/2.html
+++ b/src/pages/2.html
@@ -2,7 +2,7 @@
     <div id="page2">
         <div class="author-info">
             <div>
-                <img src="/src/assets/me.svg" alt="" />
+                <img src="./src/assets/me.svg" alt="" />
             </div>
             <div class=" author-detail">
                 <div>Hi，I'm</div>
