--- a/src/pages/3.html
+++ b/src/pages/3.html
@@ -21,7 +21,7 @@
 </div>
 <div class="page-number">3</div>
 
-<script src="/src/constant.js"></script>
+<script src="./src/constant.js"></script>
 <script>
     function showList(files, listId) {
         files.slice(0, 7).forEach((item, index) => {
