--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<title>Alplune's Blog</title>
-	<base href="/blog/">
 	<link rel="icon" href="./src/assets/alplune.svg" />
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="./turn.min.js"></script>
@@ -32,7 +31,7 @@
 			<div id="cur" draggable="true"></div>
 		</div>
 	</div>
-
+	<script src="./src/constant.js"></script>
 	<script src="./src/script.js"></script>
 	<script src="./src/viewpic.js"></script>
 </body>
