--- a/src/pages/19.html
+++ b/src/pages/19.html
@@ -1,1 +1,1 @@
-<div class="book-content"><p>friends</p></div><div class="page-number">19</div>
+<div class="page-title-even">你好，博客</div><div class="book-content"><p><img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/20241116/afd41edb8276881b87b79d2032eda228_720.webp" alt="" style="width: 100%;"></p><p>一直想写一个自己的博客，记录自己平学到的东西和对生活的感受。回到学校后便开始计划起来，想了很久决定还是写成一本书的形式，假装是个人的一半书📚。</p><p>调研了现有的一些解决方案，对翻页效果的凭空实现不太有信心，~~CSS 🦈了我吧~~ ，且 turn.js 的样例很</p></div><div class="page-number">19</div>
