--- a/src/pages/9.html
+++ b/src/pages/9.html
@@ -1,4 +1,4 @@
-<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><p><p class="no-indent">tailwindcss原理。和上面类似，只不过读取的是我们在配置文件设置的匹配的文件，读他们的class，生成对应工具类的css</p></p><h2 id="n4J0q">优缺点？</h2><h3 id="p2vST">优点</h3><ol>
+<div class="page-title-even">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><h2 id="n4J0q">优缺点？</h2><h3 id="p2vST">优点</h3><ol>
 <li>不需要起类名</li>
 <li>减少部分代码量</li>
 <li>社区氛围？</li>
