--- a/src/pages/12.html
+++ b/src/pages/12.html
@@ -3,4 +3,4 @@
 <li>长期项目：生态 = 维护性 &gt; 开发体验 &gt; 学习成本 &gt; 性能 &gt; 团队技术栈</li>
 <li>时间紧急的项目：生态 &gt; 学习成本 &gt; 团队技术栈 &gt; 开发体验 &gt; 维护性 &gt; 性能</li>
 <li>首页项目，重性能的项目：不用CSS-IN-JS &gt; 性能 &gt; 生态 &gt; 团队技术栈 &gt; 维护性 &gt; 学习成本 &gt; 开发体验</li>
-</ol><h2 id="VIrFX">总结</h2><p>CSS方案只要不是太逆天，其实都可以接受。选择一个CSS框架的本心是为了更好的适配现代前端框架和团队的开发理念。保守的技术选型可以降低开发风险，优秀的生态可以持续增强开发体验。在这些基础之上，才应该再去考虑是否添一些新东西来增强某一方面的开发体验或效果。</p></div><div class="page-number">12</div>
+</ol><h2 id="VIrFX">总结</h2><p>CSS方案只要不是太逆天，其实都可以接受。选择一个CSS框架的本心是为了更好的适配现代前端框架和团队的开发理念。保守的技术选型可以降低开发风险，优秀的生态可以持续增强开发体验。在这些基础之上，才应该再去考虑是否添一些新东西来增强某一方面的开发体验或效</p></div><div class="page-number">12</div>
