--- a/src/pages/15.html
+++ b/src/pages/15.html
@@ -1,1 +1,18 @@
-<div class="book-content"><h1 class="p-title">test</h1><p class="create-time"> 2024/11/11</p></div><div class="page-number">15</div>
+<div class="book-content"><h1 class="p-title">test</h1><p class="create-time"> 2024/11/11</p><pre><code>function initImageViewer() {
+    // 关闭模态框
+    document.addEventListener('click', function (e) {
+        let modal = document.querySelector('.modal')
+        if (modal) {
+            document.body.removeChild(modal);
+        }
+    });
+    // 初始化图片
+    const images = document.querySelectorAll('img');
+    images.forEach(image => {
+        image.addEventListener('click', function (e) {
+            // 检查是否已经存在模态框
+            if (document.querySelector('.modal'))
+                return;
+
+            // 创建一个模态框
+            const modal = document.createElement('div');</code></pre></div><div class="page-number">15</div>
