change cdn and fix highlight code time

--- a/src/pages/1.html
+++ b/src/pages/1.html
@@ -10,7 +10,7 @@
   <script>
     // 动态生成随机封面
     let randomNumber = Math.floor(Math.random() * 8) + 1;
-    let coverImage = `https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/blog-covers/cover${randomNumber}.webp`;
+    let coverImage = `https://cdn.statically.io/gh/Mingaaaaaaa/PictureBed@master/blog-covers/cover${randomNumber}.webp`;
     let imgElement = document.getElementById('coverImage');
 
     function checkUrlParams() {
