--- a/src/pages/15.html
+++ b/src/pages/15.html
@@ -15,4 +15,4 @@
                 return;
 
             // 创建一个模态框
-            const modal = document.createElement('div');</code></pre></div><div class="page-number">15</div>
+            const modal = document.createElement('div');</code></pre></div><div class="page-number">15</div><script>hljs.highlightAll()</script>
