--- a/src/pages/16.html
+++ b/src/pages/16.html
@@ -20,4 +20,4 @@
             modalImg.src = this.src;
             modalImg.style = "max-width: 100%; max-height: 100%; margin: auto; display: block;";
             modal.appendChild(modalImg);
-</code></pre></div><div class="page-number">16</div>
+</code></pre></div><div class="page-number">16</div><script>hljs.highlightAll()</script>
