--- a/src/pages/17.html
+++ b/src/pages/17.html
@@ -14,4 +14,4 @@
 
 initImageViewer();
 
-</code></pre></div><div class="page-number">17</div>
+</code></pre></div><div class="page-number">17</div><script>hljs.highlightAll()</script>
