--- a/src/pages/3.html
+++ b/src/pages/3.html
@@ -1,6 +1,6 @@
 <div class="book-content">
     <div id="p3">
-        <h2 class="navi">关于 <span id="about-page">2</span></h2>
+        <h2 class="navi">关于</h2>
         <div id="list-wrap">
             <div id="blog">
                 <h2>博客</h2>
