--- a/src/pages/8.html
+++ b/src/pages/8.html
@@ -1,2 +1,2 @@
 <div class="page-title-odd">Tailwind CSS：革命性的原子化CSS框架</div><div class="book-content"><h2 id="Bwrsk">PostCss的核心原理/工作流</h2><p>PostCSS 包括 CSS 解析器（<strong>praser</strong>），CSS 节点树 API，一个源映射生成器和一个节点树 <strong>stringifier</strong>。</p><p>PostCSS 主要的原理核心工作流：
-<img src="https://cdn.jsdelivr.net/gh/Mingaaaaaaa/PictureBed@master/image-(3).webp" alt=""></p><p>tailwindcss原理。和上面类似，只不过读取的是我们在配置文件设置的匹配的文件，读他们的class，生成对应工具类的css</p></div><div class="page-number">8</div>
+<img src="https://cdn.statically.io/gh/Mingaaaaaaa/PictureBed@master/image-(3).webp" alt=""></p><p>tailwindcss原理。和上面类似，只不过读取的是我们在配置文件设置的匹配的文件，读他们的class，生成对应工具类的css</p></div><div class="page-number">8</div>
