--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<script type="text/javascript" src="./turn.min.js"></script>
 	<link rel="stylesheet" href="./src/style.css">
 	<link rel="stylesheet"
-		href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
-	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/languages/javascript.min.js"></script>
+		href="https://cdn.statically.io/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
+	<script src="https://cdn.statically.io/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
+	<script
+		src="https://cdn.statically.io/gh/highlightjs/cdn-release@11.9.0/build/languages/javascript.min.js"></script>
 
 </head>
 
